--- a/ProductionReadySpecRunner.html
+++ b/ProductionReadySpecRunner.html
@@ -15,19 +15,12 @@
   <script src="lib/jasmine-2.4.1/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
-  <script src="build/sheetsu-web-snippet.js"></script>
+  <script src="build/sheetsu-web-client.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/ParsePageSpec.js"></script>
-  <script src="spec/RequestSpreadsheetSpec.js"></script>
-  <script src="spec/ElementOptionsSpec.js"></script>
-  <script src="spec/SwapGetElementSpec.js"></script>
-  <script src="spec/ChangeGetElementSpec.js"></script>
-  <script src="spec/SerializeFormSpec.js"></script>
-  <script src="spec/PrepareFormElementSpec.js"></script>
-  <script src="spec/ChangeElementsSpec.js"></script>
-  <script src="spec/FormEventSpec.js"></script>
+  <script src="spec/ReadSpec.js"></script>
+  <script src="spec/WriteSpec.js"></script>
 
 </head>
 
